--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -144,7 +144,8 @@
                 <div class="tabCommon mt-20">
                     <ul class="nav nav-tabs">
                         <li class="active"><a data-toggle="tab" href="#details" aria-expanded="true">Chi tiết</a></li>
-                        <li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Đánh giá (3)</a></li>
+                        <li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Đánh giá
+                                {{#if review}}({{review.length}}){{/if}}</a></li>
                     </ul>
                     <div class="tab-content patternbg">
                         <div id="details" class="tab-pane fade active in">
@@ -155,94 +156,81 @@
                             <div class="post-comments">
                                 <ul class="media-list comments-list m-bot-50 clearlist">
                                     <!-- Comment Item start-->
+                                    {{#if review}}
+
+                                    {{!-- Pagination --}}
+                                    {{!-- {{{createPagination pageOptions}}} --}}
+                                    {{#each review}}
                                     <li class="media">
 
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object comment-avatar" src="/static/images/avatar-1.jpg"
-                                                alt="" width="50" height="50" />
+                                        <a class="pull-left" {{#if author}}href="/profile/{{author._id}}" {{/if}}>
+                                            <img class="media-object comment-avatar" src="{{avatar}}" alt="" width="50"
+                                                height="50" />
                                         </a>
 
                                         <div class="media-body">
                                             <div class="comment-info">
                                                 <h4 class="comment-author">
-                                                    <a href="#">Jonathon Andrew</a>
+
+                                                    <a {{#if author}}href="/profile/{{author._id}}" {{/if}}>{{name}}</a>
 
                                                 </h4>
-                                                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-                                                <a class="comment-button" href="#"><i
-                                                        class="tf-ion-chatbubbles"></i>Reply</a>
+                                                <time>{{createdAt}}</time>
                                             </div>
 
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at
-                                                magna ut ante eleifend eleifend.Lorem ipsum dolor sit amet, consectetur
-                                                adipisicing elit. Quod laborum minima, reprehenderit laboriosam officiis
-                                                praesentium? Impedit minus provident assumenda quae.
+                                                {{body}}
                                             </p>
+                                            <a class="comment-button" href="#"><i class="tf-ion-chatbubbles"></i>Trả
+                                                lời</a>
                                         </div>
 
                                     </li>
+                                    {{/each}}
+
+                                    {{!-- Pagination --}}
+                                    {{!-- {{{createPagination pageOptions}}} --}}
+
+                                    {{else}}
+                                    <h6>Chưa ai đánh giá sản phẩm này. Hãy là người đầu tiên!</h6>
+                                    <a class="btn btn-main mt-20" href="#">Đánh giá</a>
+                                    {{/if}}
+
                                     <!-- End Comment Item -->
-
-                                    <!-- Comment Item start-->
-                                    <li class="media">
-
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object comment-avatar"
-                                                src="/static/images/blog/avatar-4.jpg" alt="" width="50" height="50" />
-                                        </a>
-
-                                        <div class="media-body">
-
-                                            <div class="comment-info">
-                                                <div class="comment-author">
-                                                    <a href="#">Jonathon Andrew</a>
-                                                </div>
-                                                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-                                                <a class="comment-button" href="#"><i
-                                                        class="tf-ion-chatbubbles"></i>Reply</a>
-                                            </div>
-
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at
-                                                magna ut ante eleifend eleifend. Lorem ipsum dolor sit amet, consectetur
-                                                adipisicing elit. Magni natus, nostrum iste non delectus atque ab a
-                                                accusantium optio, dolor!
-                                            </p>
-
-                                        </div>
-
-                                    </li>
-                                    <!-- End Comment Item -->
-
-                                    <!-- Comment Item start-->
-                                    <li class="media">
-
-                                        <a class="pull-left" href="#">
-                                            <img class="media-object comment-avatar"
-                                                src="/static/images/blog/avatar-1.jpg" alt="" width="50" height="50">
-                                        </a>
-
-                                        <div class="media-body">
-
-                                            <div class="comment-info">
-                                                <div class="comment-author">
-                                                    <a href="#">Jonathon Andrew</a>
-                                                </div>
-                                                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-                                                <a class="comment-button" href="#"><i
-                                                        class="tf-ion-chatbubbles"></i>Reply</a>
-                                            </div>
-
-                                            <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at
-                                                magna ut ante eleifend eleifend.
-                                            </p>
-
-                                        </div>
-
-                                    </li>
                                 </ul>
+                            </div>
+                            <div class="post-comments-form">
+                                <h3 class="post-sub-heading">Danh gia</h3>
+                                <form method="post" action="/comment" id="form" role="form">
+
+                                    <div class="row">
+                                        <input type="hidden" name="productId" value={{{id}}}>
+
+                                        {{#unless ../user}}
+                                        <div class="col-md-6 form-group">
+                                            <!-- Name -->
+                                            <input type="text" name="name" id="name" class=" form-control"
+                                                placeholder="Name *" maxlength="100" required="">
+                                        </div>
+                                        {{/unless}}
+
+                                        <!-- Comment -->
+                                        <div class="form-group col-md-12">
+                                            <textarea name="reviewBody" id="form" class="form-control" rows="6"
+                                                placeholder="Danh gia chi tiet" maxlength="400"></textarea>
+                                        </div>
+
+                                        <!-- Send Button -->
+                                        <div class="form-group col-md-12">
+                                            <button type="submit" class="btn btn-small btn-main">
+                                                Danh gia san pham
+                                            </button>
+                                        </div>
+
+
+                                    </div>
+
+                                </form>
                             </div>
                         </div>
                     </div>
