--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -76,7 +76,8 @@
 									class="tf-ion-ios-search-strong"></i></a>
 							<ul class="dropdown-menu search-dropdown">
 								<li>
-									<form action="post"><input type="search" class="form-control" placeholder="Tìm...">
+									<form action="/product/list" method="GET">
+										<input type="search" name="name" class="form-control" placeholder="Nhập tên sản phẩm">
 									</form>
 								</li>
 							</ul>
