--- a/views/partials/productList.hbs
+++ b/views/partials/productList.hbs
@@ -1,5 +1,5 @@
 {{#if products}}
-<div class="row">
+<div class="product-list row">
 	{{#each products}}
 	<div class="col-md-4">
 		<div class="product-item">
