trang lich su mua hang hien cac san pham da mua

--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -35,8 +35,8 @@
                     </tr>
                   </thead>
                   <tbody>
-										{{#if itemsInMyCart}}
-										{{#each itemsInMyCart}}
+										{{#if items}}
+										{{#each items}}
                     <tr class="">
                       <td class="">
                         <div class="product-info">
