modify view for new routing

--- a/views/dashboard/history.hbs
+++ b/views/dashboard/history.hbs
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a class="active" href="/dashboard/history">Lịch sử mua hàng</a></li>
-                    <li><a href="/dashboard/address">Địa chỉ giao hàng</a></li>
-                    <li><a href="/dashboard/profile">Thông tin cá nhân</a></li>
-                    <li><a href="/dashboard/changePass">Thay đổi mật khẩu</a></li>
+                    <li><a class="active" href="/user/history">Lịch sử mua hàng</a></li>
+                    <li><a href="/user/address">Địa chỉ giao hàng</a></li>
+                    <li><a href="/user/profile">Thông tin cá nhân</a></li>
+                    <li><a href="/user/changePass">Thay đổi mật khẩu</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="table-responsive">
