--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -91,9 +91,9 @@
 								{{#if user}}{{{user.username}}}{{else}}Đăng nhập{{/if}}</a>
 							<ul class="dropdown-menu login-dropdown">
 								{{#if user}}
-								<li><a href="/dashboard/history" class="btn btn-small btn-solid-border">Lịch sử mua
+								<li><a href="/user/history" class="btn btn-small btn-solid-border">Lịch sử mua
 										hàng</a></li>
-								<li><a href="/dashboard/profile" class="btn btn-small btn-solid-border">Thông tin cá
+								<li><a href="/user/profile" class="btn btn-small btn-solid-border">Thông tin cá
 										nhân</a></li>
 								<li><a href="/user/logout" class="btn btn-small btn-solid-border">Đăng xuất</a></li>
 								{{else}}
