edit comment view

--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -193,14 +193,13 @@
 
                                     {{else}}
                                     <h6>Chưa ai đánh giá sản phẩm này. Hãy là người đầu tiên!</h6>
-                                    <a class="btn btn-main mt-20" href="#">Đánh giá</a>
                                     {{/if}}
 
                                     <!-- End Comment Item -->
                                 </ul>
                             </div>
                             <div class="post-comments-form">
-                                <h3 class="post-sub-heading">Danh gia</h3>
+                                <h3 class="post-sub-heading">Đánh giá</h3>
                                 <form method="post" action="/comment" id="form" role="form">
 
                                     <div class="row">
@@ -223,7 +222,7 @@
                                         <!-- Send Button -->
                                         <div class="form-group col-md-12">
                                             <button type="submit" class="btn btn-small btn-main">
-                                                Danh gia san pham
+                                                Đánh giá sản phẩm
                                             </button>
                                         </div>
 
