--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -247,7 +247,7 @@
     <div class="container">
         <div class="row">
             <div class="title text-center">
-                <h2>San pham lien quan</h2>
+                <h2>Sản phẩm thường được mua chung</h2>
             </div>
         </div>
         {{> productList}}
