--- a/views/product/list.hbs
+++ b/views/product/list.hbs
@@ -30,6 +30,7 @@
 
                     {{!-- pagination --}}
                     <div class="row">
+                        <div class="col-md-6"></div>
                         <div class="col-md-6 text-right">
                             {{{createPagination pageOptions}}}
                         </div>
