--- a/views/user/resetPassword.hbs
+++ b/views/user/resetPassword.hbs
@@ -4,11 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Reset mật khẩu</h2>
-          {{#if this.alert}}
-          {{#with alert}}
-          {{{createAlert this}}}
-          {{/with}}
-          {{/if}}
+          {{> alert}}
           <form method='POST' class="text-left clearfix">
             <div class="form-group">
               <input name="pass" type="password" minlength=6 class="form-control" id="exampleInputEmail1" placeholder="Nhập mật khẩu mới">
