--- a/views/dashboard/changePass.hbs
+++ b/views/dashboard/changePass.hbs
@@ -9,28 +9,27 @@
                     <li><a class="active" href="/user/changePass">Thay đổi mật khẩu</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
-                  {{#if this.alert}}
-                  {{#with alert}}
-                  {{{createAlert this}}}
-                  {{/with}}
-                  {{/if}}
+                    {{> alert}}
                     <div class="media">
                         <div class="media-body">
                             <form method="POST" class="checkout-form">
                                 <div class="form-group">
                                     <label>Mật khẩu cũ</label>
-                                    <input name="oldPass" minlength=6 type="password" class="form-control" placeholder="Nhập mật khẩu cũ">
+                                    <input name="oldPass" minlength=6 type="password" class="form-control"
+                                        placeholder="Nhập mật khẩu cũ">
                                 </div>
                                 <div class="form-group">
                                     <label>Mật khẩu mới</label>
-                                    <input name="newPass" minlength=6 type="password" class="form-control" placeholder="Nhập mật khẩu mới">
+                                    <input name="newPass" minlength=6 type="password" class="form-control"
+                                        placeholder="Nhập mật khẩu mới">
                                 </div>
                                 <div class="form-group">
                                     <label>Xác nhận mật khẩu mới</label>
-                                    <input name="confirmPass" minlength=6 type="password" class="form-control" placeholder="Nhập lại mật khẩu mới">
+                                    <input name="confirmPass" minlength=6 type="password" class="form-control"
+                                        placeholder="Nhập lại mật khẩu mới">
                                 </div>
-                             <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
-                             <button type="submit" class="btn btn-main text-center">Thay đổi mật khẩu</button>
+                                <!-- <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a> -->
+                                <button type="submit" class="btn btn-main text-center">Thay đổi mật khẩu</button>
                             </form>
                         </div>
                     </div>
