--- a/views/user/forgetPassword.hbs
+++ b/views/user/forgetPassword.hbs
@@ -5,11 +5,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Chào mừng bạn trở lại</h2>
-          {{#if this.alert}}
-          {{#with alert}}
-          {{{createAlert this}}}
-          {{/with}}
-          {{/if}}
+          {{> alert}}
           <form method='POST' class="text-left clearfix">
             <p>Hãy nhập tài khoản email của bạn để chúng tôi hỗ trợ bạn lấy lại tài khoản.</p>
             <div class="form-group">
