--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -4,11 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Đăng nhập</h2>
-          {{#if this.alert}}
-          {{#with alert}}
-          {{{createAlert this}}}
-          {{/with}}
-          {{/if}}
+          {{> alert}} 
           <form method='POST' class="text-left clearfix" action="/user/login">
             <div class="form-group">
               <input name='username' type="text" class="form-control" placeholder="Tên đăng nhập">
