--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -4,11 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
           <h2 class="text-center">Tạo tài khoản</h2>
-          {{#if this.alert}}
-          {{#with alert}}
-          {{{createAlert this}}}
-          {{/with}}
-          {{/if}}
+          {{> alert}}
           <form method="POST" class="text-left clearfix" action="#">
             <div class="form-group">
               <input name="name" type="text" class="form-control"  placeholder="Họ tên">
