fixed delete item when login

--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -47,7 +47,7 @@
 											<td class="">{{this.quantity}}</td>
                       <td class="">{{this.price}} đồng</td>
                       <td class="">
-                        <a class="product-remove" href="/checkout/cart" onclick="deleteItem('{{this.id}}')">Xóa</a>
+                        <a class="product-remove" href="#" onclick="deleteItem('{{this.id}}')">Xóa</a>
                       </td>
                     </tr>
 										{{/each}}
