valiate update profile and payment

--- a/views/checkout/payment.hbs
+++ b/views/checkout/payment.hbs
@@ -36,7 +36,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="phone">Số điện thoại</label>
-                                <input type="tel" class="form-control" id="phone" placeholder="" value="{{phone}}">
+                                <input type="number" class="form-control" id="phone" placeholder="" value="{{phone}}">
                             </div>
                         </form>
                     </div>
@@ -74,7 +74,8 @@
                                         data-key= "pk_test_84txC7qRHjJlklB3rOe5Basb00Vxj290Xh"
                                         data-amount = "{{totalPrice}}"
                                         data-locale = "auto"
-                                        data-currency = "vnd">
+                                        data-currency = "vnd"
+                                        data-label = "Thanh toán">
                                         </script>
                                     </form>
                                 </div>
