--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -480,6 +480,7 @@
 	<!-- Custom js -->
 	{{!-- <script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBItRd4sQ_aXlQG_fvEzsxvuYyaWnJKETk&callback=initMap"></script> --}}
+	<script src="/static/js/payment.js"></script>
 	<script src="/static/js/cart.js"></script>
 	<script src="/static/js/script.js"></script>
 
