--- a/views/dashboard/profile.hbs
+++ b/views/dashboard/profile.hbs
@@ -36,7 +36,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="phone">Số điện thoại</label>
-                                        <input name="phone" type="tel" class="form-control" id="phone"
+                                        <input name="phone" type="number" class="form-control" id="phone"
                                             placeholder="" value="{{phone}}">
                                     </div>
                                     <button type="submit" class="btn btn-main text-center">Lưu và sửa đổi</button>
