--- a/views/checkout/payment.hbs
+++ b/views/checkout/payment.hbs
@@ -25,24 +25,35 @@
                 <div class="col-md-8">
                     <div class="block billing-details">
                         <h4 class="widget-title">Chi tiết đơn hàng</h4>
-                        <form class="checkout-form">
+                        <form class="checkout-form" method="post">
                             <div class="form-group">
                                 <label for="name">Họ và tên</label>
-                                <input type="text" class="form-control" id="name" placeholder="" value="{{name}}">
+                                <input name="name" type="text" class="form-control" id="name" placeholder="" value="{{name}}">
                             </div>
                             <div class="form-group">
                                 <label for="address">Địa chỉ</label>
-                                <input type="text" class="form-control" id="address" placeholder="" value="{{address}}">
+                                <input name="address" type="text" class="form-control" id="address" placeholder="" value="{{address}}">
                             </div>
                             <div class="form-group">
                                 <label for="phone">Số điện thoại</label>
-                                <input type="number" class="form-control" id="phone" placeholder="" value="{{phone}}">
+                                <input name="phone" type="number" class="form-control" id="phone" placeholder="" value="{{phone}}">
                             </div>
+                            <h4 class="widget-title">Phương thức thanh toán</h4>
+                            <p>Thanh toán bằng thẻ tín dụng</p>
+                            <script
+                            src="https://checkout.stripe.com/checkout.js"
+                            class="stripe-button"
+                            data-key= "pk_test_84txC7qRHjJlklB3rOe5Basb00Vxj290Xh"
+                            data-amount = "{{totalPrice}}"
+                            data-locale = "auto"
+                            data-currency = "vnd"
+                            data-label = "Thanh toán">
+                            </script>
                         </form>
                     </div>
                     <div class="block">
-                        <h4 class="widget-title">Phương thức thanh toán</h4>
-                        <p>Thanh toán bằng thẻ tín dụng</p>
+                        <!-- <h4 class="widget-title">Phương thức thanh toán</h4>
+                        <p>Thanh toán bằng thẻ tín dụng</p> -->
                         <div class="checkout-product-details">
                             <div class="payment">
                                 <div class="card-details">
@@ -67,7 +78,7 @@
                                         <!-- <button type="submit" class="btn btn-main text-center">Xác nhận đặt
                                             hàng</button>
                                     </form> -->
-                                    <form method="post">
+                                    <!-- <form method="post">
                                         <script
                                         src="https://checkout.stripe.com/checkout.js"
                                         class="stripe-button"
@@ -77,7 +88,7 @@
                                         data-currency = "vnd"
                                         data-label = "Thanh toán">
                                         </script>
-                                    </form>
+                                    </form> -->
                                 </div>
                             </div>
                         </div>
