--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -132,7 +132,7 @@
                     </div> <!-- End tag  -->
                     {{/if}}
 
-                    <a href="/checkout/cart" class="btn btn-main mt-20">Thêm vào giỏ</a>
+                    <a class="btn btn-main mt-20" onclick="addCart('{{id}}')">Thêm vào giỏ</a>
                 </div>
             </div>
 
